testsuite/tests/parser/should_fail/T8501a.stderr

T8501a.hs:5:3: error:
    Parse error in pattern: rec
    Possibly caused by a missing 'do'?
    Perhaps you intended to use RecursiveDo
